Adventure New links

--- a/AdventureComics/adventurecomics.html
+++ b/AdventureComics/adventurecomics.html
@@ -10,15 +10,9 @@
 <body>
 <img src="AdventureComics032.jpg"><br>
 Series: 472 issues (#32-503) 1938 - 1983.<br>
-(#1-11 New Comics, #12-31 New Adventure Comics)<br>
+<a href="https://blzimg.github.io/NewComics/NewComics.html"> Numbering begins with #1-11 New Comics then #12-31 New Adventure Comics</a><br>
 Publisher: National Allied, DC <br>
 <p>
-Adventure Comics began its nearly 50-year run in December 1935 under the title <a href="../NewComics/NewComics.html">New Comics</a>, which was only the second comic book series published by National Allied Publications, now DC Comics. And the first series, <a href="../MoreFun/MoreFun.html"> More Fun</a> which merged into Adventure Comics.
-</p><p>
-The series was retitled New Adventure Comics with its 12th issue in January 1937. Issue #32 (November 1938) saw the title changed again to Adventure Comics, which would remain the book's name until it ended with issue #503.
-</p><p>
-The title featured various characters but began focusing on Superman related (Superboy, Supergirl) by issue #103. Issues #32 - #103 are contained in the slideshow below, then jumps to the last issue #503.
-</p><p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
 </div> </div>
@@ -104,6 +98,12 @@ The title featured various characters but began focusing on Superman related (Su
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
-</p>
+</p><p>
+Adventure Comics began its nearly 50-year run in December 1935 under the title <a href="../NewComics/NewComics.html">New Comics</a>, which was only the second comic book series published by National Allied Publications, now DC Comics. And the first series, <a href="../MoreFun/MoreFun.html"> More Fun</a> which merged into Adventure Comics.
+</p><p>
+The series was retitled New Adventure Comics with its 12th issue in January 1937. Issue #32 (November 1938) saw the title changed again to Adventure Comics, which would remain the book's name until it ended with issue #503.
+</p><p>
+The title featured various characters but began focusing on Superman related (Superboy, Supergirl) by issue #103. Issues #32 - #103 are contained in the slideshow below, then jumps to the last issue #503.
+</p><p>
 </body>
 </html>
