--- a/NewComics/NewComics.html
+++ b/NewComics/NewComics.html
@@ -10,8 +10,7 @@
 <body>
 <img src="NewComics001.jpg"> <br>
 Series: #1-11 1935 - 1936, #12-31 1937 - 1938<br>
-Illustrator: #1 Vin Sullivan<br>
-Writer: #1 Malcolm Wheeler-Nicholson, (various)<br>
+<a href="https://blzimg.github.io/AdventureComics/adventurecomics.html">Numbering continues with Adventure Comics #32</a><br>
 Publisher: National Allied, DC <br>
 <p>
 New Comics in December 1935 under the title New Comics, which was only the second comic book series published by National Allied Publications, now DC Comics. The series was retitled New Adventure Comics with its 12th issue in January 1937. Issue #32 (November 1938) saw the title changed again to <a href="../AdventureComics/adventurecomics.html">Adventure Comics</a>, which would remain the book's name until it ended with issue #503.<br>
