--- a/ClassicsIllustrated/ClassicsIllustrated.html
+++ b/ClassicsIllustrated/ClassicsIllustrated.html
@@ -9,28 +9,10 @@
 
 <body>
 Classic Comics / Classics Illustrated<br>
-<img src="ClassicsIllustrated1941series01.jpg"> <br>
-Series: 169 issues 1941-1971<br>
+<img src="ClassicsIllustrated1941series01.jpg"><br>
+Series: 169 issues 1941-1971, record breaking 1 billion copies sold!<br>
 Publisher: Elliot Publishing<br>
 <p>
-Classics Illustrated is an American comic book series featuring adaptations of literary classics such as Les Miserables, Moby Dick, Hamlet, and The Iliad. Created by Albert Kanter, the series began publication in 1941 and finished its first run in 1971, producing 169 issues. Following the series' demise, various companies reprinted its titles. This series is different from the Great Illustrated Classics, which is an adaptation of the classics for young readers that includes illustrations, but is not in the comic book form.
-</p><p>
-Russian-born publisher Albert Lewis Kanter (1897–1973) created Classic Comics for Elliot Publishing Company in 1941 with its debut issues being The Three Musketeers (seen above), followed by Ivanhoe and The Count of Monte Cristo. In addition to the literary adaptations, books featured author profiles, educational fillers, and an ad for the coming title. 
-</p><p>
-In later editions, a catalog of titles and a subscription order form appeared on back covers. Recognizing the appeal of early comic books, Albert Lewis Kanter believed he could use the new medium to introduce young and reluctant readers to "great literature".
-</p><p>
-The first five titles were published irregularly under the banner "Classic Comics Presents" while issues six and seven were published under the banner "Classic Comics Library" with a ten-cent cover price. Arabian Nights (issue 8), illustrated by Lillian Chestney, is the first issue to use the "Classics Comics" banner.
-</p><p>
-With the fourth issue, The Last of the Mohicans, in 1942, Kanter moved the operation to different offices and the corporate identity was changed to the Gilberton Company, Inc.. Reprints of previous titles began in 1943. Wartime paper shortages forced Kanter to reduce the 64-page format to 56 pages.
-</p><p>
-Classic Comics is marked by varying quality in art and is celebrated today for its often garish but highly collectible line-drawn covers. Artists include Lillian Chestney (Arabian Nights, issue 8, and Gulliver's Travels, issue 16), Webb and Brewster (Frankenstein, issue 26), Matt Baker (Lorna Doone, issue 32), and Henry Carl Kiefer (second cover for The Prince and the Pauper, issue 29, cover for The Adventures of Sherlock Holmes, issue 33, and the first Classics Illustrated issue The Last Days of Pompeii, issue 35). Oliver Twist (issue 23) was the first title produced by the Eisner &amp; Iger shop.
-</p><p>
-Some titles were packaged in gift boxes of threes or fours during the period with specific themes such as adventure or mystery. Dr. Jekyll and Mr. Hyde (issue 13) and Uncle Tom's Cabin (issue 15) were both cited in Dr. Fredric Wertham's infamous 1954 condemnation of comic books Seduction of the Innocent. Original edition Classic Comics in Near Mint condition command prices in the thousands of dollars.
-</p><p>
-The series' name was changed in March 1947 to Classics Illustrated with issue 35 The Last Days of Pompeii. In 1948, rising paper costs reduced books to 48 pages. In 1951, line-drawn covers were replaced with painted covers (issue 81), and the price was raised from 10 cents to 15 cents, (and, at a later date, to 25 cents). In addition to Classics Illustrated, Kanter presided over its spin-offs Classics Illustrated Junior (1953), Specials, and The World Around Us. Between 1941 and 1962, sales totaled 200 million.
-</p><p>
-After four years, Twin Circle discontinued the line because of poor distribution. Since the series' demise, various companies have reprinted its titles. By the early 1970s, Classics Illustrated and Junior had been discontinued, although the Classics Illustrated branding would be used on a series of telemovies produced by Schick Sunn Classics.
-</p><p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
 </div> </div>
@@ -83,7 +65,24 @@ After four years, Twin Circle discontinued the line because of poor distribution
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
-
+</p><p>
+Classics Illustrated is an American comic book series featuring adaptations of literary classics such as Les Miserables, Moby Dick, Hamlet, and The Iliad. Created by Albert Kanter, the series began publication in 1941 and finished its first run in 1971, producing 169 issues. Following the series' demise, various companies reprinted its titles. This series is different from the Great Illustrated Classics, which is an adaptation of the classics for young readers that includes illustrations, but is not in the comic book form.
+</p><p>
+Russian-born publisher Albert Lewis Kanter (1897–1973) created Classic Comics for Elliot Publishing Company in 1941 with its debut issues being The Three Musketeers (seen above), followed by Ivanhoe and The Count of Monte Cristo. In addition to the literary adaptations, books featured author profiles, educational fillers, and an ad for the coming title. 
+</p><p>
+In later editions, a catalog of titles and a subscription order form appeared on back covers. Recognizing the appeal of early comic books, Albert Lewis Kanter believed he could use the new medium to introduce young and reluctant readers to "great literature".
+</p><p>
+The first five titles were published irregularly under the banner "Classic Comics Presents" while issues six and seven were published under the banner "Classic Comics Library" with a ten-cent cover price. Arabian Nights (issue 8), illustrated by Lillian Chestney, is the first issue to use the "Classics Comics" banner.
+</p><p>
+With the fourth issue, The Last of the Mohicans, in 1942, Kanter moved the operation to different offices and the corporate identity was changed to the Gilberton Company, Inc.. Reprints of previous titles began in 1943. Wartime paper shortages forced Kanter to reduce the 64-page format to 56 pages.
+</p><p>
+Classic Comics is marked by varying quality in art and is celebrated today for its often garish but highly collectible line-drawn covers. Artists include Lillian Chestney (Arabian Nights, issue 8, and Gulliver's Travels, issue 16), Webb and Brewster (Frankenstein, issue 26), Matt Baker (Lorna Doone, issue 32), and Henry Carl Kiefer (second cover for The Prince and the Pauper, issue 29, cover for The Adventures of Sherlock Holmes, issue 33, and the first Classics Illustrated issue The Last Days of Pompeii, issue 35). Oliver Twist (issue 23) was the first title produced by the Eisner &amp; Iger shop.
+</p><p>
+Some titles were packaged in gift boxes of threes or fours during the period with specific themes such as adventure or mystery. Dr. Jekyll and Mr. Hyde (issue 13) and Uncle Tom's Cabin (issue 15) were both cited in Dr. Fredric Wertham's infamous 1954 condemnation of comic books Seduction of the Innocent. Original edition Classic Comics in Near Mint condition command prices in the thousands of dollars.
+</p><p>
+The series' name was changed in March 1947 to Classics Illustrated with issue 35 The Last Days of Pompeii. In 1948, rising paper costs reduced books to 48 pages. In 1951, line-drawn covers were replaced with painted covers (issue 81), and the price was raised from 10 cents to 15 cents, (and, at a later date, to 25 cents). In addition to Classics Illustrated, Kanter presided over its spin-offs Classics Illustrated Junior (1953), Specials, and The World Around Us. Between 1941 and 1962, sales totaled 200 million.
+</p><p>
+After four years, Twin Circle discontinued the line because of poor distribution. Since the series' demise, various companies have reprinted its titles. By the early 1970s, Classics Illustrated and Junior had been discontinued, although the Classics Illustrated branding would be used on a series of telemovies produced by Schick Sunn Classics.
 </p>
 </body>
 </html>
