--- a/DarwynCooke/DarwynCooke.html
+++ b/DarwynCooke/DarwynCooke.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<img src="DarwynCooke.jpg"> <br>
+<img src="DarwynCooke.jpg" title="Darwyn Cooke"> <br>
 
 <p>
 <div class="row"><div class="column">
