--- a/4Most/4Most.html
+++ b/4Most/4Most.html
@@ -12,6 +12,24 @@
 Series: 40 issues 1941 - 1950 <br>
 Publisher: Novelty / Premium / Curtis<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="4Most1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="4Most2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="4Most3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="4Most4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="4Most5.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 An action anthology series designed as a competitor to "World's Finest Comics" by DC.
 </p><p>
 The title changed to "4 Most Boys" with issue 37 - 40, then the numbering continues with the title "Thrilling Crime Cases" (Star Publications, 1950 series) #41.
@@ -22,5 +40,6 @@ Although not granted supernatural powers, Dick Cole with his intellect, moral co
 </p><p>
 Another regular feature was Target and The Targeteers, created by Dick Hamilton. This is in fact a pseudonym and Dick Hamilton was really Dick Briefer, now most famous for his Frankenstein. Other content included 'Edison Bell, Boy Inventor' drawn by Harry Ramsey, Dan'l Flannel, Lem the Grem 'The Trouble-Loving Gremlin' and work by L.B. Cole and Nina Albright.
 </p>
+
 </body>
 </html>
