--- a/Xmen/xmen.html
+++ b/Xmen/xmen.html
@@ -11,65 +11,9 @@
 <img src="Xmen001.jpg" title="X-Men #1 1963"> <br>
 Created by: Jack Kirby, Stan Lee<br>
 Publisher: Marvel<br>
-Comic Series: First set started in 1963 (#1-66), (#67-93 = reprints), Giant-Sized X-Men #1 and issues #94-544 feature the new X-Men team, #114 title changes to "Uncanny X-Men" but same story line and numeration until issue #544 in 2012. Continues to #600 in 2015 with some title changes and renumbering.<br>
+Comic Series: 1963 (#1-66), (#67-93 = reprints), Giant-Sized X-Men #1 and issues #94-544 feature the new X-Men team, #114 title changes to "Uncanny X-Men" gets dropped with #544 in 2012. Continues to #600 in 2015 with some title changes and renumbering.<br>
 Movie Series: 10 so far with more comming (2000 - 2017).<br>
 <p>
-Created by writer Stan Lee and artist/co-writer Jack Kirby, the characters are among the most recognizable and successful intellectual properties of Marvel Comics, appearing in numerous comic title branches, books, television shows, films, and video games.
-</p><p>
-The X-Men are mutants, a subspecies of humans who are born with superhuman abilities. The X-Men fight for peace and equality between normal humans and mutants in a world where antimutant bigotry is fierce and widespread.
-</p><p>
-<img src="XmenMovie1.jpg" title="X-Men (2000)"> 
-<img src="XmenMovie2.jpg" title="X2 X-Men United (2003)"> 
-<img src="XmenMovie3.jpg" title="X-Men The Last Stand (2006)">
-</p><p>
-MOVIES<br>
-X-Men is an American superhero film series based on the Marvel comic series of the same name. 20th Century Fox obtained the film rights to the characters in 1994, and after numerous drafts, Bryan Singer was hired to direct X-Men (2000) and its sequel, X2 (2003), while Brett Ratner directed X-Men: The Last Stand (2006).
-</p><p>
-<img src="XmenMovie4.jpg" title="X-Men Origins Wolverine (2009)"> 
-<img src="XmenMovie5.jpg" title="X-Men First Class (2011)"> 
-<img src="XmenMovie6.jpg" title="The Wolverine (2013)"> 
-<img src="XmenMovie7.jpg" title="X-Men Days of Future Past (2014)"> 
-<img src="XmenMovie8.jpg" title="Deadpool (2016)"> 
-<img src="XmenMovie9.jpg" title="X-Men Apocalypse (2016)">
-<img src="XmenMovie10.jpg" title="Logan (2017)">
-</p><p>
-After each film earned higher box office grosses than its predecessor, several spin-off films were released, including a trilogy focused on the character of Wolverine: X-Men Origins: Wolverine (2009), The Wolverine (2013) and Logan (2017). A prequel, X-Men: First Class, was released in 2011, followed by sequels X-Men: Days of Future Past (2014) (also a sequel to X-Men: The Last Stand), and X-Men: Apocalypse (2016). A spin-off film, Deadpool (2016) was also released.
-</p><p>
-<img src="XmenMovie11.jpg" title="Deadpool 2 (2018)"> 
-<img src="XmenMovie12.jpg"  title="X-Men Dark Phoenix (2018)"> 
-<img src="XmenMovie13.jpg"  title="the New Mutants (2019)">
-</p><p>
-With ten films released, the X-Men film series is the seventh highest-grossing film series, having grossed over US$4.9 billion worldwide. It is set to continue with the releases of Deadpool 2 and X-Men: Dark Phoenix in 2018, and The New Mutants in 2019.
-</p><p>
-COMICS<br>
-Early X-Men issues (#1-66) introduced the original team composed of Cyclops, Marvel Girl, Beast, Angel, and Iceman, along with their archenemy Magneto and his Brotherhood of Evil Mutants featuring Mastermind, Quicksilver, Scarlet Witch, and Toad. The comic focused on a common human theme of good versus evil and later included storylines and themes about prejudice and racism, all of which have persisted throughout the series in one form or another. 
-</p><p>
-The evil side in the fight was shown in human form and under some sympathetic beginnings via Magneto, a character who was later revealed to have survived Nazi concentration camps only to pursue a hatred for normal humanity. His key followers, Quicksilver and the Scarlet Witch, were Romani. Only one new member of the X-Men was added, Mimic/Calvin Rankin, but soon left due to his temporary loss of power.
-</p><p>
-The title lagged in sales behind Marvel's other comic franchises. In 1969, writer Roy Thomas and illustrator Neal Adams rejuvenated the comic book and gave regular roles to two recently introduced characters: Havok/Alex Summers (who had been introduced by Roy Thomas before Adams began work on the comic) and Lorna Dane, later called Polaris (created by Arnold Drake and Jim Steranko). 
-</p><p>
-These later X-Men issues failed to attract sales and Marvel stopped producing new stories with issue #66, later reprinting a number of the older comics as issues #67–93.
-</p><p>
-In Giant-Size X-Men #1 (1975), writer Len Wein and artist Dave Cockrum introduced a new team that starred in a revival of The X-Men, beginning with issue #94. This new team replaced the previous members with the exception of Cyclops, who remained.
-</p><p>
-This team differed greatly from the original. Unlike in the early issues of the original series, the new team was not made up of teenagers and they also had a more diverse background. Each was from a different country with varying cultural and philosophical beliefs, and all were already well-versed in using their mutant powers, several being experienced in combat. 
-</p><p>
-The "all-new, all-different X-Men" were led by Cyclops, from the original team, and consisted of the newly created Colossus (from the Soviet Union), Nightcrawler (from West Germany), Storm (from Kenya), and Thunderbird (a Native American of Apache descent), and three previously introduced characters: Banshee (from Ireland), Sunfire (from Japan), and Wolverine (from Canada). 
-</p><p>
-Wolverine eventually became the breakout character on the team and, in terms of comic sales and appearances, the most popular X-Men character. However, this team would not remain whole for long as Sunfire quit immediately and never really accepted the other members, and Thunderbird would die in the very next mission. Filling in the vacancy, a revamped Jean Grey soon rejoined the X-Men under her new persona of "Phoenix". Angel, Beast, Iceman, Havok, and Polaris also made significant guest appearances.
-</p><p>
-The revived series was illustrated by Cockrum, and later by John Byrne, and written by Chris Claremont. Claremont became the series' longest-running contributor. The run met with critical acclaim and produced such landmark storylines as the death of Thunderbird, the emergence of Phoenix, the saga of the Starjammers and the M'Kraan Crystal, the introduction of Alpha Flight and the Proteus saga. Other characters introduced during this time include Amanda Sefton, Mystique, and Moira MacTaggert, with her genetic research facility on Muir Island.
-</p><p>
-The 1980s began with the comic's best-known story arc, the Dark Phoenix Saga, which saw Phoenix manipulated by the illusionist Mastermind and becoming corrupted with an overwhelming lust for power and destruction as the evil Dark Phoenix. Other important storylines included Days of Future Past, the saga of Deathbird and the Brood, the discovery of the Morlocks, the invasion of the Dire Wraiths and The Trial of Magneto, as well as X-Men: God Loves, Man Kills, the partial inspiration for the 2003 movie X2: X-Men United.
-</p><p>
-By the early 1980s, X-Men was Marvel's top-selling comic title. Its sales were such that distributors and retailers began using an "X-Men index", rating each comic book publication by how many orders it garnered compared to that month's issue of X-Men. The growing popularity of Uncanny X-Men and the rise of comic book specialty stores led to the introduction of a number of ongoing spin-off series nicknamed "X-Books." 
-</p><p>
-The first of these was The New Mutants, soon followed by Alpha Flight, X-Factor, Excalibur, and a solo Wolverine title. When Claremont conceived a story arc, the Mutant Massacre, which was too long to run in the monthly X-Men, editor Louise Simonson decided to have it overlap into several X-Books. The story was a major financial success, and when the later Fall of the Mutants was similarly successful, the marketing department declared that the X-Men lineup would hold such crossovers annually.
-</p><p>
-Throughout the decade, Uncanny X-Men was written solely by Chris Claremont, and illustrated for long runs by John Byrne, Dave Cockrum, Paul Smith, John Romita, Jr., and Marc Silvestri. Additions to the X-Men during this time were Kitty Pryde/Shadowcat, Dazzler, Forge, Longshot, Psylocke, Rogue, Rachel Summers/Phoenix, and Jubilee. 
-</p><p>
-In a controversial move, Professor X relocated to outer space to be with Lilandra Neramani, Majestrix of the Shi'ar Empire, in 1986. Magneto then joined the X-Men in Xavier's place and became the director of the New Mutants. This period also included the emergence of the Hellfire Club, the arrival of the mysterious Madelyne Pryor, and the villains Apocalypse, Mister Sinister, Mojo, and Sabretooth.
-</p><p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
 </div> </div>
@@ -301,30 +245,64 @@ In a controversial move, Professor X relocated to outer space to be with Lilandr
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
+</p><p>
+Created by writer Stan Lee and artist/co-writer Jack Kirby, the characters are among the most recognizable and successful intellectual properties of Marvel Comics, appearing in numerous comic title branches, books, television shows, films, and video games.
+</p><p>
+The X-Men are mutants, a subspecies of humans who are born with superhuman abilities. The X-Men fight for peace and equality between normal humans and mutants in a world where antimutant bigotry is fierce and widespread.
+</p><p>
+<img src="XmenMovie1.jpg" title="X-Men (2000)"> 
+<img src="XmenMovie2.jpg" title="X2 X-Men United (2003)"> 
+<img src="XmenMovie3.jpg" title="X-Men The Last Stand (2006)">
+</p><p>
+MOVIES<br>
+X-Men is an American superhero film series based on the Marvel comic series of the same name. 20th Century Fox obtained the film rights to the characters in 1994, and after numerous drafts, Bryan Singer was hired to direct X-Men (2000) and its sequel, X2 (2003), while Brett Ratner directed X-Men: The Last Stand (2006).
+</p><p>
+<img src="XmenMovie4.jpg" title="X-Men Origins Wolverine (2009)"> 
+<img src="XmenMovie5.jpg" title="X-Men First Class (2011)"> 
+<img src="XmenMovie6.jpg" title="The Wolverine (2013)"> 
+<img src="XmenMovie7.jpg" title="X-Men Days of Future Past (2014)"> 
+<img src="XmenMovie8.jpg" title="Deadpool (2016)"> 
+<img src="XmenMovie9.jpg" title="X-Men Apocalypse (2016)">
+<img src="XmenMovie10.jpg" title="Logan (2017)">
+</p><p>
+After each film earned higher box office grosses than its predecessor, several spin-off films were released, including a trilogy focused on the character of Wolverine: X-Men Origins: Wolverine (2009), The Wolverine (2013) and Logan (2017). A prequel, X-Men: First Class, was released in 2011, followed by sequels X-Men: Days of Future Past (2014) (also a sequel to X-Men: The Last Stand), and X-Men: Apocalypse (2016). A spin-off film, Deadpool (2016) was also released.
+</p><p>
+<img src="XmenMovie11.jpg" title="Deadpool 2 (2018)"> 
+<img src="XmenMovie12.jpg"  title="X-Men Dark Phoenix (2018)"> 
+<img src="XmenMovie13.jpg"  title="the New Mutants (2019)">
+</p><p>
+With ten films released, the X-Men film series is the seventh highest-grossing film series, having grossed over US$4.9 billion worldwide. It is set to continue with the releases of Deadpool 2 and X-Men: Dark Phoenix in 2018, and The New Mutants in 2019.
+</p><p>
+COMICS<br>
+Early X-Men issues (#1-66) introduced the original team composed of Cyclops, Marvel Girl, Beast, Angel, and Iceman, along with their archenemy Magneto and his Brotherhood of Evil Mutants featuring Mastermind, Quicksilver, Scarlet Witch, and Toad. The comic focused on a common human theme of good versus evil and later included storylines and themes about prejudice and racism, all of which have persisted throughout the series in one form or another. 
+</p><p>
+The evil side in the fight was shown in human form and under some sympathetic beginnings via Magneto, a character who was later revealed to have survived Nazi concentration camps only to pursue a hatred for normal humanity. His key followers, Quicksilver and the Scarlet Witch, were Romani. Only one new member of the X-Men was added, Mimic/Calvin Rankin, but soon left due to his temporary loss of power.
+</p><p>
+The title lagged in sales behind Marvel's other comic franchises. In 1969, writer Roy Thomas and illustrator Neal Adams rejuvenated the comic book and gave regular roles to two recently introduced characters: Havok/Alex Summers (who had been introduced by Roy Thomas before Adams began work on the comic) and Lorna Dane, later called Polaris (created by Arnold Drake and Jim Steranko). 
+</p><p>
+These later X-Men issues failed to attract sales and Marvel stopped producing new stories with issue #66, later reprinting a number of the older comics as issues #67–93.
+</p><p>
+In Giant-Size X-Men #1 (1975), writer Len Wein and artist Dave Cockrum introduced a new team that starred in a revival of The X-Men, beginning with issue #94. This new team replaced the previous members with the exception of Cyclops, who remained.
+</p><p>
+This team differed greatly from the original. Unlike in the early issues of the original series, the new team was not made up of teenagers and they also had a more diverse background. Each was from a different country with varying cultural and philosophical beliefs, and all were already well-versed in using their mutant powers, several being experienced in combat. 
+</p><p>
+The "all-new, all-different X-Men" were led by Cyclops, from the original team, and consisted of the newly created Colossus (from the Soviet Union), Nightcrawler (from West Germany), Storm (from Kenya), and Thunderbird (a Native American of Apache descent), and three previously introduced characters: Banshee (from Ireland), Sunfire (from Japan), and Wolverine (from Canada). 
+</p><p>
+Wolverine eventually became the breakout character on the team and, in terms of comic sales and appearances, the most popular X-Men character. However, this team would not remain whole for long as Sunfire quit immediately and never really accepted the other members, and Thunderbird would die in the very next mission. Filling in the vacancy, a revamped Jean Grey soon rejoined the X-Men under her new persona of "Phoenix". Angel, Beast, Iceman, Havok, and Polaris also made significant guest appearances.
+</p><p>
+The revived series was illustrated by Cockrum, and later by John Byrne, and written by Chris Claremont. Claremont became the series' longest-running contributor. The run met with critical acclaim and produced such landmark storylines as the death of Thunderbird, the emergence of Phoenix, the saga of the Starjammers and the M'Kraan Crystal, the introduction of Alpha Flight and the Proteus saga. Other characters introduced during this time include Amanda Sefton, Mystique, and Moira MacTaggert, with her genetic research facility on Muir Island.
+</p><p>
+The 1980s began with the comic's best-known story arc, the Dark Phoenix Saga, which saw Phoenix manipulated by the illusionist Mastermind and becoming corrupted with an overwhelming lust for power and destruction as the evil Dark Phoenix. Other important storylines included Days of Future Past, the saga of Deathbird and the Brood, the discovery of the Morlocks, the invasion of the Dire Wraiths and The Trial of Magneto, as well as X-Men: God Loves, Man Kills, the partial inspiration for the 2003 movie X2: X-Men United.
+</p><p>
+By the early 1980s, X-Men was Marvel's top-selling comic title. Its sales were such that distributors and retailers began using an "X-Men index", rating each comic book publication by how many orders it garnered compared to that month's issue of X-Men. The growing popularity of Uncanny X-Men and the rise of comic book specialty stores led to the introduction of a number of ongoing spin-off series nicknamed "X-Books." 
+</p><p>
+The first of these was The New Mutants, soon followed by Alpha Flight, X-Factor, Excalibur, and a solo Wolverine title. When Claremont conceived a story arc, the Mutant Massacre, which was too long to run in the monthly X-Men, editor Louise Simonson decided to have it overlap into several X-Books. The story was a major financial success, and when the later Fall of the Mutants was similarly successful, the marketing department declared that the X-Men lineup would hold such crossovers annually.
+</p><p>
+Throughout the decade, Uncanny X-Men was written solely by Chris Claremont, and illustrated for long runs by John Byrne, Dave Cockrum, Paul Smith, John Romita, Jr., and Marc Silvestri. Additions to the X-Men during this time were Kitty Pryde/Shadowcat, Dazzler, Forge, Longshot, Psylocke, Rogue, Rachel Summers/Phoenix, and Jubilee. 
+</p><p>
+In a controversial move, Professor X relocated to outer space to be with Lilandra Neramani, Majestrix of the Shi'ar Empire, in 1986. Magneto then joined the X-Men in Xavier's place and became the director of the New Mutants. This period also included the emergence of the Hellfire Club, the arrival of the mysterious Madelyne Pryor, and the villains Apocalypse, Mister Sinister, Mojo, and Sabretooth.
+</p><p>
 
-<ul>First series (1963-1981):
-<li><a href="Xmen001.html">X-Men #1</a></li>
-<li><a href="Xmen002.html">X-Men #2</a></li>
-<li><a href="Xmen003.html">X-Men #3</a></li>
-<li><a href="Xmen004.html">X-Men #4</a></li>
-<li><a href="Xmen005.html">X-Men #5</a></li>
-<li><a href="Xmen006.html">X-Men #6</a></li>
-<li><a href="Xmen007.html">X-Men #7</a></li>
-<li><a href="Xmen008.html">X-Men #8</a></li>
-<li><a href="Xmen009.html">X-Men #9</a></li>
-<li><a href="Xmen010.html">X-Men #10</a></li>
-<li><a href="Xmen011.html">X-Men #11</a></li>
-<li><a href="Xmen012.html">X-Men #12</a></li>
-<li><a href="Xmen013.html">X-Men #13</a></li>
-<li><a href="Xmen014.html">X-Men #14</a></li>
-<li><a href="Xmen015.html">X-Men #15</a></li>
-<li><a href="Xmen016.html">X-Men #16</a></li>
-<li><a href="Xmen017.html">X-Men #17</a></li>
-<li><a href="Xmen018.html">X-Men #18</a></li>
-<li><a href="Xmen019.html">X-Men #19</a></li>
-<li><a href="Xmen020.html">X-Men #20</a></li>
-
-</ul>
 Titles:<br>
 <a href="../X-MenAdventures/XmenAdventures.html">Adventures of the X-Men</a> Cartoon adaptation series <br>
 All-New X-Factor #1-20 (January 2014 - January 2015)	Marvel<br>
@@ -389,5 +367,6 @@ Uncanny X-Men Volume 1 #142–545 (1981 to 2011)	Marvel<br>
 Uncanny X-Men Volume 2 #1-20 (2011-2012)	Marvel<br>
 Uncanny X-Men Volume 3 #1-35 #600 (2013-2015)	Marvel<br>
 </p>
+
 </body>
 </html>
