--- a/NewMutants/NewMutants.html
+++ b/NewMutants/NewMutants.html
@@ -2,16 +2,48 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>the New Mutants</title>
 </head>
 
 <body>
-<img src="https://blzim.github.io/kb/Creation/MarvelGraphicNovel/MarvelGraphicNovel004.jpg"> 
-<img src="NewMutants1983series1.jpg"> <br>
-Series: 1 Graphic Novel (#4) 1982, 100 issues 1983-1991<br>
-Publisher: Marvel<br>
+<img src="https://blzim.github.io/kb/Creation/MarvelGraphicNovel/MarvelGraphicNovel004.jpg"><br>
+One Graphic Novel (#4) 1982, 100 issues 1983-1991, 13 issues 2003-2004, 50 issues 2009-2012<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="NewMutants01.jpg" title="Cover by Bob McLeod"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewMutants02.jpg" title="Cover by Bob McLeod"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewMutants03.jpg" title="Cover by Mike Gustovich"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewMutants04.jpg" title="Cover by Bob McLeod"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewMutants05.jpg" title="Cover by Armando Gil"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewMutants06.jpg" title="Cover by Bob McLeod"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewMutants07.jpg" title="Cover by Bob McLeod"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewMutants08.jpg" title="Cover by Bob McLeod"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewMutants09.jpg" title="Cover by Bob McLeod"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewMutants10.jpg" title="Cover by Bob McLeod"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewMutants11.jpg" title="Cover by Walt Simonson"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewMutants12.jpg" title="Cover by Tom Mandrake"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewMutants13.jpg" title="Cover by Bret Blevins"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewMutants14.jpg" title="Cover by Tom Mandrake"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewMutants15.jpg" title="Cover by Tom Mandrake"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewMutants16.jpg" title="Cover by Tom Mandrake"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewMutants17.jpg" title="Cover by June Brigman"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewMutants18.jpg" title="Cover by Bill Sienkiewicz"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewMutants19.jpg" title="Cover by Bill Sienkiewicz"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewMutants20.jpg" title="Cover by Bill Sienkiewicz"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 The New Mutants are a group of teenaged mutant superheroes-in-training appearing in American comic books published by Marvel Comics. They have been the main characters of three successive comic book series, which were spin-offs of the X-Men franchise.
 </p><p>
 The first team of New Mutants characters was created by Chris Claremont and artist Bob McLeod. They first appeared in 1982's <a href="https://blzim.github.io/kb/Creation/MarvelGraphicNovel/MarvelGraphicNovel004.html">Marvel Graphic Novel #4</a> and are subsequently featured in their own title from 1983 until 1991. Like its parent title, The New Mutants highlighted interpersonal and group conflict as well as action and adventure, and featured a large ensemble cast. With the end of the first series, the characters were relaunched as X-Force in a new, eponymous series.
