--- a/CreepyThings/CreepyThings.html
+++ b/CreepyThings/CreepyThings.html
@@ -30,7 +30,7 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-
+Comics with a supernatural theme enjoyed a surge in popularity in the 1960s and 70s. Attempting to cash in on this trend, Charlton Comics released Creepy Things. With its spooky parade of mutant frogs, practitioners of Black Magic, vampires, and other strange creatures, this title promised to provide one of the scariest collections of stories available. Although the first issue did not have one, subsequent issues had a recurring narrator who set the mood for each tale. This was a common theme for “monster comics,” and carried over into more enduring titles like House of Mystery and Tales from the Crypt.
 </p>
 </body>
 </html>
