--- a/BlackPanther/BlackPanther.html
+++ b/BlackPanther/BlackPanther.html
@@ -9,12 +9,9 @@
 
 <body>
 <img src="BlackPanther.jpg"><br>
-Series: on-going, at least 6 times!<br>
-Illustrator: Jack Kirby<br>
-Writer: Jack Kirby<br>
+Creator: Jack Kirby<br>
 Publisher: Marvel<br>
-<p>
-Series: 1. 1977 (#1-15); 2. 1988 (#1-4 limited series + #1-62); 3. 2005 (#1-41); 4. 2009 (#1-13); 5. 2011 (The Man Without Fear, 11 issues) 6. 2016 (#1-18 then 166-169?); I think if you add them all up (and a few I haven't found yet) you can jump from 18 to 166?
+Series: 1977 (#1-15); 1988 (#1-4 limited series + #1-62); 2005 (#1-41); 2009 (#1-13); 2011 (The Man Without Fear, 11 issues); 2016 (#1-18 then 166-169?).
 </p><p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
