--- a/SwampThing/SwampThing.html
+++ b/SwampThing/SwampThing.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<img src="SwampThing1.jpg"><br>
+<img src="SwampThing1.jpg" title="Cover by Tom Yeates"><br>
 Series: 38 issues (#1 -38) 1982 - 1985, 133 issues (#39 - 171) 1985 - 1996, <br>
 Publisher: DC<br>
 <p>
@@ -20,10 +20,12 @@ Publisher: DC<br>
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src="SwampThing1.jpg" title="First issue"></div>
-<div class="mySlides" style="text-align: center;"><img src="SwampThing20.jpg" title="First Alan Moore"></div>
-<div class="mySlides" style="text-align: center;"><img src="SwampThing39.jpg" title="Drops the Saga of from the title"></div>
-<div class="mySlides" style="text-align: center;"><img src="SwampThing129.jpg" title="First Vertigo"></div>
+<div class="mySlides" style="text-align: center;"><img src="SwampThing1.jpg" title="Cover by Tom Yeates"></div>
+<div class="mySlides" style="text-align: center;"><img src="SwampThing20.jpg" title="Cover by Tom Yeates, story by Alan Moore"></div>
+<div class="mySlides" style="text-align: center;"><img src="SwampThing39.jpg" title="Saga dropped from the title"></div>
+<div class="mySlides" style="text-align: center;"><img src="SwampThing129.jpg" title="Cover by Charles Vess, first Vertigo"></div>
+<div class="mySlides" style="text-align: center;"><img src="SwampThing130.jpg" title="Cover by Charles Vess"></div>
+<div class="mySlides" style="text-align: center;"><img src="SwampThing131.jpg" title="Cover by Charles Vess"></div>
 <div class="mySlides" style="text-align: center;"><img src="SwampThingMovie1982.jpg" title="First Movie"></div>
 <div class="mySlides" style="text-align: center;"><img src="SwampThingMovie1989.jpg" title="Worst Movie"></div>
 <div class="mySlides" style="text-align: center;"><img src="SwampThingCartoon.jpg" title="Cartoon Series"></div>
