--- a/kb.html
+++ b/kb.html
@@ -13304,6 +13304,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Zatanna</td>
+<td>1993</td>
+<td>DC</td>
+<td><a href="Zatanna/Zatanna.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Zero Killer</td>
 <td>2007</td>
 <td>Dark Horse</td>
