--- a/Zatanna/Zatanna.html
+++ b/Zatanna/Zatanna.html
@@ -45,6 +45,7 @@
 <div class="mySlides" style="text-align: center;"><img src="Zatanna24.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Zatanna25.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Zatanna26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Zatanna27.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
