--- a/Shazam/Shazam.html
+++ b/Shazam/Shazam.html
@@ -2,22 +2,35 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Captain Marvel</title>
 </head>
 
 <body>
-<h2>Captain Marvel</h2>
-<img src="Shazam1940.jpg"> 
-<img src="CaptainMarvel019.jpg"> 
-<img src="CaptainMarvel053.jpg"> 
-<img src="CaptainMarvel080.jpg"> 
-<img src="Shazam1941.jpg"> <br>
-Series: on-going<br>
+<img src="Shazam1940.jpg" title="Captain 'Shazam' Marvel"><br>
 Illustrator: C. C. Beck<br>
 Writer: Bill Parker<br>
 Publisher: 1941 Fawcett, DC<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Shazam1940.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaptainMarvel019.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaptainMarvel053.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaptainMarvel080.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Shazam1941.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Captain Marvel, also referred to as Shazam, is a fictional superhero appearing in American comic books published by DC Comics. Artist C. C. Beck and writer Bill Parker created the character in 1939. Captain Marvel first appeared in Whiz Comics #2 (cover-dated Feb. 1940), published by Fawcett Comics. He is the alter ego of Billy Batson, a boy who, by speaking the magic word "SHAZAM" (acronym of six "immortal elders": Solomon, Hercules, Atlas, Zeus, Achilles and Mercury), can transform himself into a costumed adult with the powers of superhuman strength, speed, flight and other abilities.
 </p><p>
 Based on book sales, the character was the most popular superhero of the 1940s, outselling even Superman. Fawcett expanded the franchise to include other "Marvels", primarily Marvel Family associates Mary Marvel and Captain Marvel Jr., who can harness Billy's powers as well. Captain Marvel was also the first comic book superhero to be adapted into film, in a 1941 Republic Pictures serial titled Adventures of Captain Marvel.
