--- a/ZombieWorld/ZombieWorld.html
+++ b/ZombieWorld/ZombieWorld.html
@@ -21,6 +21,10 @@ Publisher: Dark Horse<br>
 <div class="modal-content">
 
 <div class="mySlides" style="text-align: center;"><img src="ZombieWorld.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ZombieWorld02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ZombieWorld03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ZombieWorld04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ZombieWorld05.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
