--- a/ZombieWorld/ZombieWorld.html
+++ b/ZombieWorld/ZombieWorld.html
@@ -25,6 +25,13 @@ Publisher: Dark Horse<br>
 <div class="mySlides" style="text-align: center;"><img src="ZombieWorld03.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ZombieWorld04.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ZombieWorld05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ZombieWorld06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ZombieWorld07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ZombieWorld08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ZombieWorld09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ZombieWorld10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ZombieWorld11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ZombieWorld12.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
