--- a/kb.html
+++ b/kb.html
@@ -6181,6 +6181,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>History of Violence</td>
+<td>2005</td>
+<td>DC</td>
+<td><a href="HistoryOfViolence/HistoryOfViolence.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Hokum &amp; Hex</td>
 <td>1993</td>
 <td>Marvel</td>
