--- a/VisionAndTheScarletWitch/VisionAndTheScarletWitch.html
+++ b/VisionAndTheScarletWitch/VisionAndTheScarletWitch.html
@@ -21,6 +21,9 @@ Publisher: Marvel<br>
 <div class="modal-content">
 
 <div class="mySlides" style="text-align: center;"><img src="VisionAndTheScarletWitch1982series1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="VisionAndTheScarletWitch1982series2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="VisionAndTheScarletWitch1982series3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="VisionAndTheScarletWitch1982series4.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="VisionAndTheScarletWitch.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
