--- a/AmericanSplendor/AmericanSplendor.html
+++ b/AmericanSplendor/AmericanSplendor.html
@@ -2,20 +2,42 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>American Splendor</title>
 </head>
 
 <body>
-<h2>American Splendor</h2>
-<img src="AmericanSplendor001.jpg">
-<img src="AmericanSplendorVertigo.jpg">
-<img src="AmericanSplendorDarkHorse.jpg"> <br>
-Series: on-going<br>
-Illustrator: Robert Crumb<br>
+<img src="AmericanSplendor001.jpg" title="cover by Gary Dunn"><br>
+16 issues 1976 - 1991
 Writer:Harvey Pekar<br>
-Publisher: Harvey Pekar, DC, Dark Horse<br>
+Publisher: Harvey Pekar, Vertigo, Dark Horse<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="AmericanSplendor001.jpg" title="cover by Gary Dunn"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanSplendor002.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanSplendor003.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanSplendor004.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanSplendor005.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanSplendor006.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanSplendor007.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanSplendor008.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanSplendor009.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanSplendor010.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanSplendorVertigo.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanSplendorDarkHorse.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 American Splendor is a series of autobiographical comic books written by Harvey Pekar and drawn by a variety of artists. The first issue was published in 1976 and the most recent in September 2008, with publication occurring at irregular intervals. Publishers have been, at various times, Harvey Pekar himself, Dark Horse Comics, and DC Comics.
 </p><p>
 The comics have been adapted into a film of the same name and a number of theatrical productions.
